--- a/cpe357.md
+++ b/cpe357.md
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: cpe_357
-permalink: /cpe_357/
+title: Class Work
+permalink: /class_work/
 ---
 
 This is where the course work for all the projects and exercises will go.
