--- a/courses/cpe123.md
+++ b/courses/cpe123.md
@@ -3,7 +3,11 @@ layout: page
 permalink: /cpe123/
 ---
 
-**CPE 123**
-------------
+**CPE 123 - Computational Art**
+-------------------------------
 
-Computational Art
+Course Description: Use of a supportive software development environment to design, develop, and test applications in a selected topic domain that demonstrates the potential of careers in computing.
+
+Instructor: Julie Workman
+
+Fall Quarter 2015
