--- a/courses/cpe123.md
+++ b/courses/cpe123.md
@@ -11,3 +11,20 @@ Course Description: Use of a supportive software development environment to desi
 Instructor: Julie Workman
 
 Fall Quarter 2015
+
+##### Lab 1
+
+[Lab1](https://jonscott20.github.io/Files/cpe123/Shocked_Koala.jpg)
+
+##### Lab 2
+
+[Lab2](https://jonscott20.github.io/Files/cpe123/BlexbolexImitation_Traveling_Salesman.jpg)
+
+##### Lab 3
+
+[Lab3](https://jonscott20.github.io/Files/cpe123/SurrealismAfter.jpg)
+[Lab3](https://jonscott20.github.io/Files/cpe123/SurrealismBefore.jpg)
+
+##### Lab 4
+
+[Lab4](https://jonscott20.github.io/Files/cpe123/RandomCityScape.png)
