--- a/courses/cpe123.md
+++ b/courses/cpe123.md
@@ -20,11 +20,18 @@ Fall Quarter 2015
 
 ![Lab2](https://jonscott20.github.io/Files/cpe123/BlexbolexImitation_Traveling_Salesman.jpg)
 
+------------
+
 ##### Lab 3
 
+![Lab3](https://jonscott20.github.io/Files/cpe123/SurrealismBefore.jpg) | 
 ![Lab3](https://jonscott20.github.io/Files/cpe123/SurrealismAfter.jpg)
-![Lab3](https://jonscott20.github.io/Files/cpe123/SurrealismBefore.jpg)
 
-##### Lab 4
 
-![Lab4](https://jonscott20.github.io/Files/cpe123/RandomCityScape.png)
+--------
+
+##### Generative Art - Structured
+
+![Generative Art - Structured](https://jonscott20.github.io/Files/cpe123/RandomCityScape.png)
+
+Used loops and a randomizer function to generate buildings. The houses, skyscrapers, stars, color scheme, and the horizon all have randomized elements.
