--- a/courses/cpe123.md
+++ b/courses/cpe123.md
@@ -12,25 +12,32 @@ Instructor: Julie Workman
 
 Fall Quarter 2015
 
-##### Lab 1
+##### Expressionism: Shocked Koala
 
-![Lab1](https://jonscott20.github.io/Files/cpe123/Shocked_Koala.jpg)
+![Shocked Koala](https://jonscott20.github.io/Files/cpe123/Shocked_Koala.jpg)
 
-##### Lab 2
-
-![Lab2](https://jonscott20.github.io/Files/cpe123/BlexbolexImitation_Traveling_Salesman.jpg)
+Used Processing to create a sketch of an animal in an expressionist manner. The model image can be found [here](https://www.pinterest.com/pin/548313323358956118/)
 
 ------------
 
-##### Lab 3
+##### Blexbolex Imitation: "Traveling"
 
-![Lab3](https://jonscott20.github.io/Files/cpe123/SurrealismBefore.jpg) | 
-![Lab3](https://jonscott20.github.io/Files/cpe123/SurrealismAfter.jpg)
+![Blexbolex Imitation: "Traveling"](https://jonscott20.github.io/Files/cpe123/BlexbolexImitation_Traveling_Salesman.jpg)
 
+Made in Processing, used to demonstrate the use of variables as well as scaling and translating graphic elements. Three images, each with the man scaled to a different size.
+
+------------
+
+##### Surrealism: "Sunset Cowboy"
+
+![Sunset_Cowboy_Before](https://jonscott20.github.io/Files/cpe123/SurrealismBefore.jpg) | 
+![Sunset_Cowboy After](https://jonscott20.github.io/Files/cpe123/SurrealismAfter.jpg)
+
+Used Processing to animate a specific object only when it has been clicked on. In this case, used the implicit equation for a circle to detect if the click was on the sun. The gradient in the background was a challenge, done by drawing line segments of different colors. The two images shown are before and after animation pictures.
 
 --------
 
-##### Generative Art - Structured
+##### Generative Art: Structured City Scape
 
 ![Generative Art - Structured](https://jonscott20.github.io/Files/cpe123/RandomCityScape.png)
 
