--- a/courses/cpe123.md
+++ b/courses/cpe123.md
@@ -12,7 +12,7 @@ Instructor: Julie Workman
 
 Fall Quarter 2015
 
-##### Expressionism: Shocked Koala
+### Expressionism: Shocked Koala
 
 ![Shocked Koala](https://jonscott20.github.io/Files/cpe123/Shocked_Koala.jpg)
 
@@ -20,7 +20,7 @@ Used Processing to create a sketch of an animal in an expressionist manner. The 
 
 ------------
 
-##### Blexbolex Imitation: "Traveling"
+### Blexbolex Imitation: "Traveling"
 
 ![Blexbolex Imitation: "Traveling"](https://jonscott20.github.io/Files/cpe123/BlexbolexImitation_Traveling_Salesman.jpg)
 
@@ -28,7 +28,7 @@ Made in Processing, used to demonstrate the use of variables as well as scaling 
 
 ------------
 
-##### Surrealism: "Sunset Cowboy"
+### Surrealism: "Sunset Cowboy"
 
 ![Sunset_Cowboy_Before](https://jonscott20.github.io/Files/cpe123/SurrealismBefore.jpg) | 
 ![Sunset_Cowboy After](https://jonscott20.github.io/Files/cpe123/SurrealismAfter.jpg)
@@ -37,7 +37,7 @@ Used Processing to animate a specific object only when it has been clicked on. I
 
 --------
 
-##### Generative Art: Structured City Scape
+### Generative Art: Structured Cityscape
 
 ![Generative Art - Structured](https://jonscott20.github.io/Files/cpe123/RandomCityScape.png)
 
