--- a/courses/cpe123.md
+++ b/courses/cpe123.md
@@ -6,7 +6,7 @@ permalink: /cpe123/
 **CPE 123 - Computational Art**
 -------------------------------
 
-Course Description: Use of a supportive software development environment to design, develop, and test applications in a selected topic domain that demonstrates the potential of careers in computing.
+Course Description: Use of a supportive software development environment to design, develop, and test applications in a selected topic domain that demonstrates the potential of careers in computing. An introduction to computing and to the selected topic domain. The Schedule of Classes will list topic selected. No programming experience required.
 
 Instructor: Julie Workman
 
