--- a/courses/cpe123.md
+++ b/courses/cpe123.md
@@ -42,3 +42,5 @@ Used Processing to animate a specific object only when it has been clicked on. I
 ![Generative Art - Structured](https://jonscott20.github.io/Files/cpe123/RandomCityScape.png)
 
 Used loops and a randomizer function to generate buildings. The houses, skyscrapers, stars, color scheme, and the horizon all have randomized elements.
+
+[Return to coursework](https://jonscott20.github.io/course_work/)
