--- a/courses/csc348.md
+++ b/courses/csc348.md
@@ -1,4 +1,9 @@
-[CSC 348 - Discrete Structures](https://jonscott20.github.io/cpe348)
+---
+layout: page
+permalink: /csc348/
+---
+
+[CSC 348 - Discrete Structures](https://jonscott20.github.io/csc348)
 ---------------------------------
 
 Course Description: Structures of computer science: logic, sets, relations, functions, graphs and trees. Propositional and predicate logic. Applications of predicate logic to preconditions, postconditions, and proof techniques. Complexity of algorithms.
@@ -6,3 +11,5 @@ Course Description: Structures of computer science: logic, sets, relations, func
 Instructor: Theresa Migler-VonDollen
 
 Winter 2017
+
+[Return to coursework](https://jonscott20.github.io/course_work/)
