--- a/courses/cpe357.md
+++ b/courses/cpe357.md
@@ -14,16 +14,18 @@ Winter Quarter 2017
 
 **Projects**
 
-- [LZW Compression - Under Construction](https://jonscott20.github.io/lzwcompression)
+- [LZW Compression](https://jonscott20.github.io/lzwcompression)
 
-- [C Shell - Under Construction](https://jonscott20.github.io/cshell)
+- [C Shell](https://jonscott20.github.io/cshell)
 
 - [Battleship](https://jonscott20.github.io/battleship)
 
-- [Word Frequency - Under Construction](https://jonscott20.github.io/wordfrequency)
+- [Word Frequency](https://jonscott20.github.io/wordfrequency)
 
-- [Word Count - Under Construction](https://jonscott20.github.io/wordcount)
+- [Word Count](https://jonscott20.github.io/wordcount)
 
-- [Mastermind - Under Construction](https://jonscott20.github.io/mastermind)
+- [Mastermind](https://jonscott20.github.io/mastermind)
+
+--------
 
 [Return to coursework](https://jonscott20.github.io/course_work/)
