--- a/courses/cpe357.md
+++ b/courses/cpe357.md
@@ -28,4 +28,4 @@ Winter Quarter 2017
 
 --------
 
-[Return to coursework](https://jonscott20.github.io/course_work/)
+[Return to Course Work](https://jonscott20.github.io/course_work/)
