--- a/courses/cpe225.md
+++ b/courses/cpe225.md
@@ -3,6 +3,12 @@ layout: page
 permalink: /cpe225/
 ---
 
-Under Construction...
+Course Description: Introduction to computer systems. Simple instruction set architecture and the computer hardware needed to implement that architecture. Machine and assembly language programming
 
-[Return to coursework](https://jonscott20.github.io/course_work/)
+Instructor: John Planck
+
+Programming Language: Assembly & C
+
+Fall 2016
+
+[Return to Course Work](https://jonscott20.github.io/course_work/)
