--- a/courses/cpe103.md
+++ b/courses/cpe103.md
@@ -3,6 +3,15 @@ layout: page
 permalink: /cpe103/
 ---
 
-Under Construction
+**CPE 103 - Fundamentals of Computer Science III**
+---------------------------------------------------
 
-[Return to coursework](https://jonscott20.github.io/course_work/)
+Course Description: Introduction to data structures and analysis of algorithms. Abstract data types. Specification and implementation of advanced data structures. Theoretical and empirical analysis and proofs of properties of recursive and iterative algorithms. Software performance evaluation and testing techniques.
+
+Instructor: Chris Buckalew
+
+Programming Language: Java
+
+Fall 2016
+
+[Return to Course Work](https://jonscott20.github.io/course_work/)
