--- a/courses/cpe225.md
+++ b/courses/cpe225.md
@@ -3,6 +3,9 @@ layout: page
 permalink: /cpe225/
 ---
 
+**CPE 225 - Introduction to Computer Organization**
+---------------------------------------------------
+
 Course Description: Introduction to computer systems. Simple instruction set architecture and the computer hardware needed to implement that architecture. Machine and assembly language programming
 
 Instructor: John Planck
