--- a/courses/cpe102.md
+++ b/courses/cpe102.md
@@ -3,6 +3,17 @@ layout: page
 permalink: /cpe102/
 ---
 
-Under Construction...
+**CPE 102 - Fundamentals of Computer Science II**
+-------------------------------------------------
 
-[Return to coursework](https://jonscott20.github.io/course_work/)
+Course Description: Basic design, implementation, testing, and documentation of object-oriented software. Introduction to classes, interfaces, inheritance, algorithms (sort, search, recursion), abstract data types, data structures (lists, stacks, queues), file I/O, and exceptions.
+
+Instructor: Julie Workman
+
+Programming Language: Java
+
+Spring 2016
+
+----------------
+
+[Return to Course Work](https://jonscott20.github.io/course_work/)
