--- a/courses/csc348.md
+++ b/courses/csc348.md
@@ -3,7 +3,7 @@ layout: page
 permalink: /csc348/
 ---
 
-[CSC 348 - Discrete Structures](https://jonscott20.github.io/csc348)
+CSC 348 - Discrete Structures
 ---------------------------------
 
 Course Description: Structures of computer science: logic, sets, relations, functions, graphs and trees. Propositional and predicate logic. Applications of predicate logic to preconditions, postconditions, and proof techniques. Complexity of algorithms.
@@ -12,4 +12,6 @@ Instructor: Theresa Migler-VonDollen
 
 Winter 2017
 
-[Return to coursework](https://jonscott20.github.io/course_work/)
+--------
+
+[Return to Course Work](https://jonscott20.github.io/course_work/)
