--- a/courses/cpe123.md
+++ b/courses/cpe123.md
@@ -43,4 +43,6 @@ Used Processing to animate a specific object only when it has been clicked on. I
 
 Used loops and a randomizer function to generate buildings. The houses, skyscrapers, stars, color scheme, and the horizon all have randomized elements.
 
-[Return to coursework](https://jonscott20.github.io/course_work/)
+----------
+
+[Return to Course Work](https://jonscott20.github.io/course_work/)
