--- a/courses/cpe101.md
+++ b/courses/cpe101.md
@@ -3,6 +3,17 @@ layout: page
 permalink: /cpe101/
 ---
 
-Under Construction...
+**CPE 101 - Fundamentals of Computer Science I**
+-----------------------------------------------
 
-[Return to coursework](https://jonscott20.github.io/course_work/)
+Course Description: Basic principles of algorithmic problem solving and programming using methods of top-down design, stepwise refinement and procedural abstraction. Basic control structures, data types, and input/output. Introduction to the software development process: design, implementation, testing and documentation. The syntax and semantics of a modern programming language.
+
+Instructor: Julie Workman
+
+Programming Language: Python
+
+Winter 2016
+
+--------------------
+
+[Return to Course Work](https://jonscott20.github.io/course_work/)
