--- a/courses/cpe357.md
+++ b/courses/cpe357.md
@@ -3,7 +3,7 @@ layout: page
 permalink: /cpe357/
 ---
 
-[CPE 357 - Systems Programming](https://jonscott20.github.io/cpe357)
+**CPE 357 - Systems Programming**
 ---------------------------------
 
 Course Description: C programming language from a system programming perspective. Standard C language including operators, I/O functions, and data types in the context of system functions. Unix commands, shell scripting, file system, editors.
