--- a/courses/csc300.md
+++ b/courses/csc300.md
@@ -1,1 +1,18 @@
-fe
+---
+layout: page
+permalink: /csc300/
+---
+
+**CSC 300 - Professional Responsibilities**
+-------------------------------------------
+
+Course Description: The responsibilities of the computer science professional. The ethics of science and the IEEE/ACM Software Engineering Code of Ethics. Quality tradeoffs, software system safety, intellectual property, history of computing and the social implications of computers in the modern world. Applications to ethical dilemmas in computing
+
+Instructor:  Nikolaos Sakellariou
+
+Spring Quarter 2017
+
+**Writing Assignments**
+
+- [The Ethics Behind Empty Optimizations](https://jonscott20.github.io/Files/Documents/The Ethics Behind Empty Optimizations.pdf)
+- [The Ethical Computing Professional and the Inner-Net](https://jonscott20.github.io/Files/Documents/The Ethical Computing Professional and the Inner-Net.pdf)
