--- a/courses/csc300.md
+++ b/courses/csc300.md
@@ -14,5 +14,5 @@ Spring Quarter 2017
 
 **Writing Assignments**
 
-- [The Ethics Behind Empty Optimizations](https://jonscott20.github.io/Files/Documents/The Ethics Behind Empty Optimizations.pdf)
-- [The Ethical Computing Professional and the Inner-Net](https://jonscott20.github.io/Files/Documents/The Ethical Computing Professional and the Inner-Net.pdf)
+- [The Ethics Behind Empty Optimizations](https://jonscott20.github.io/Files/Documents/The_Ethics_Behind_Empty_Optimizations.pdf)
+- [The Ethical Computing Professional and the Inner-Net](https://jonscott20.github.io/Files/Documents/The_Ethical_Computing_Professional_and_the_Inner-Net.pdf)
