--- a/courses/csc300.md
+++ b/courses/csc300.md
@@ -16,3 +16,5 @@ Spring Quarter 2017
 
 - [The Ethics Behind Empty Optimizations](https://jonscott20.github.io/Files/Documents/The_Ethics_Behind_Empty_Optimizations.pdf)
 - [The Ethical Computing Professional and the Inner-Net](https://jonscott20.github.io/Files/Documents/The_Ethical_Computing_Professional_and_the_Inner-Net.pdf)
+
+[Return to Course Work](https://jonscott20.github.io/course_work/)
