--- a/courses/csc300.md
+++ b/courses/csc300.md
@@ -15,7 +15,7 @@ Spring Quarter 2017
 **Writing Assignments**
 
 - [The Ethics Behind Empty Optimizations](https://jonscott20.github.io/Files/Documents/The_Ethics_Behind_Empty_Optimizations.pdf)
-- [The Ethical Computing Professional and the Inner-Net](https://jonscott20.github.io/Files/Documents/The_Ethical Computing_Professional_and_the_Inner-Net.pdf)
+- [The Ethical Computing Professional and the Inner-Net](https://jonscott20.github.io/Files/Documents/The_Ethical_Computing_Professional_and_the_Inner-Net.pdf)
 - [The Right to Repair: The Transition from Disposable Electronics to DIY Projects](https://jonscott20.github.io/Files/Documents/The_Right_to_Repair.pdf)
 
 [Return to Course Work](https://jonscott20.github.io/course_work/)
