--- a/courses/csc307.md
+++ b/courses/csc307.md
@@ -12,7 +12,8 @@ Instructor: Davide Falessi
 
 Spring Quarter 2017
 
-**Labs**
+**Final Project Demonstration**
+[PASTA - Priority Assignment Saucy Tracker App](https://www.youtube.com/watch?v=lRSneMCppLo)
 
 **Assignments**
 
