--- a/courses/csc307.md
+++ b/courses/csc307.md
@@ -3,7 +3,7 @@ layout: page
 permalink: /csc307/
 ---
 
-**CSC 307 - Introduction to Computer Security**
+**CSC 307 - Introduction to Software Engineering**
 -------------------------------------------
 
 Course Description: Requirements, specification, design, implementation, testing and verification of large software systems. Study and use of the software process and software engineering methodologies; working in project teams. 
@@ -12,10 +12,10 @@ Instructor: Davide Falessi
 
 Spring Quarter 2017
 
-**Final Project Demonstration**
+[Final Project Demonstration](https://www.youtube.com/watch?v=lRSneMCppLo)
 
-[PASTA - Priority Assignment Saucy Tracker App](https://www.youtube.com/watch?v=lRSneMCppLo)
+[Final Project Powerpoint](https://jonscott20.github.io/Files/Documents/307_Final_Presentation.pptx)
 
-**Assignments**
+[Final Project SRS](https://jonscott20.github.io/Files/Documents/307_SRS_Group_5.pdf)
 
 [Return to Course Work](https://jonscott20.github.io/course_work/)
