--- a/courses/csc321.md
+++ b/courses/csc321.md
@@ -14,6 +14,19 @@ Spring Quarter 2017
 
 **Labs**
 
+1. [System Security Audit](https://jonscott20.github.io/Files/Documents/321_Lab1.pdf)
+
+2. [RSA & PlayFair](https://jonscott20.github.io/Files/Documents/321_RSA_&_PlayFiar.pdf)
+
 **Assignments**
 
+1. The Vigenère Cipher
+
+2. Breaking the Vigenère Cipher
+
+3. Exploiting a Buffer Overflow
+
+4. Mksuid
+
+---------
 [Return to Course Work](https://jonscott20.github.io/course_work/)
