--- a/courses/csc321.md
+++ b/courses/csc321.md
@@ -14,9 +14,9 @@ Spring Quarter 2017
 
 **Labs**
 
-1. [System Security Audit](https://jonscott20.github.io/Files/Documents/321_Lab1.pdf)
+1. [System Security Audit](https://jonscott20.github.io/Files/Documents/321_Lab1)
 
-2. [RSA & PlayFair](https://jonscott20.github.io/Files/Documents/321_RSA_&_PlayFiar.pdf)
+2. [RSA & PlayFair](https://jonscott20.github.io/Files/Documents/321_RSA_&_PlayFair)
 
 **Assignments**
 
